p11815 Process queue in customer.